# mytempura

./: .dockerignore  .env.template  .flake8  .gitignore  Dockerfile  README.md  celerybeat-schedule.db  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  serviceAccountKey.json.example  test.py
.github/workflows/: backend.yml
api/: urls.py
api/middlewares/: __init__.py  api_middlewares.py  openapi.py
api/serializers/: __init__.py  auth.py  common.py  nlp_bot.py
api/views/: __init__.py  auth.py  eliza_bot.py  keyword.py  nlp_bot.py
backend/: apps.py  enums.py  exceptions.py
backend/admin/: __init__.py  account.py  bot.py
backend/migrations/: 0001_initial.py  0002_alter_account_options_alter_account_table.py  0003_alter_account_email.py  0004_bot.py  0005_account_selected_bot.py
backend/models/: __init__.py  account.py  base.py  bot.py
backend/services/: __init__.py  firebase.py  jwt.py
backup/: dump.sql
data/: doctor.txt  doctor_vi.txt  eliza_service_test_script.py  test.py
keywordrecognition/: apps.py  enums.py  exceptions.py  urls.py
keywordrecognition/admin/: __init__.py  decomp.py  default_message.py  eliza_bot.py  inline.py  keyword.py  postprocessing.py  quit.py  reasmb.py  synonym.py
keywordrecognition/migrations/: 0001_initial.py  0002_alter_defaultmessage_bot.py  0003_remove_elizabot_created_at_and_more.py  0004_alter_elizabot_bot_ptr.py  0005_decomp_weight.py  0006_synonym_bot.py  (+2 more)
main/: __init__.py  admin.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
nlp/: apps.py  enums.py  exceptions.py
(+75 files in other folders)
